--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -723,9 +723,9 @@
         </div>
 
         <nav class="nav-menu">
-          <a href="#" class="nav-link">Khám phá</a>
-          <a href="#" class="nav-link">Thể loại</a>
-          <a href="#" class="nav-link">Bestseller</a>
+          <a href="/explore" class="nav-link">Khám phá</a>
+          <a href="/categories" class="nav-link">Thể loại</a>
+          <a href="/bestsellers" class="nav-link">Bestseller</a>
         </nav>
 
         <div class="auth-section" id="authSection">
